# nes_oxide

./: .gitignore  Cargo.toml  README.md  imgui.ini
src/: main.rs
src/cpu/: bus.rs  cartridge.rs  controller.rs  cpu.rs  instructions.rs  joypad.rs  mapper.rs  mod.rs
src/ppu/: mod.rs  registers.rs
src/renderer/: debug.rs  frame.rs  mod.rs
