[package]
name = "nes_oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
glow = "0.13.1"
imgui = { version = "0.12.0", features = ["tables-api"] }
imgui-glow-renderer = "0.12.0"
imgui-sdl2-support = "0.12.0"
num-traits = "0.2"
rand = "0.8.5"
sdl2 = "0.34.5"
